# planar_geometry

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEV_SETUP.md  DOCSTRING_ANALYSIS_SUMMARY.md  DOCS_GENERATION_SUMMARY.md  DOCS_VIEWING_GUIDE.md  DOCUMENTATION_BUILD_SESSION.md  Dockerfile  MATHJAX_FIX_GUIDE.md  Makefile  PDF_DOCUMENTATION_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  README_ANALYSIS.md  SESSION_SUMMARY.md  analysis_report.md  docker-compose.yml  improvement_checklist.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-test.txt  tox.ini  📊_ANALYSIS_INDEX.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  quality.yml  tests.yml
docs/: README.md  conf.py  index.rst
docs/_static_source/: mathjax-config.js
docs/api/: circles.rst  lines.rst  points.rst  polygons.rst  utils.rst  vectors.rst
docs/dev/: architecture.rst  contributing.rst
docs/guide/: advanced.rst  basic_usage.rst  installation.rst  quick_start.rst
scripts/: bump_version.py  serve_docs.sh
src/planar_geometry/: __init__.py  curve.py  geometry_utils.py  measurable.py  point.py  surface.py
src/planar_geometry/abstracts/: __init__.py
src/planar_geometry/curve/: __init__.py  line.py  line_segment.py  vector2d.py
src/planar_geometry/point/: __init__.py  point2d.py
src/planar_geometry/surface/: __init__.py  circle.py  ellipse.py  polygon.py  rectangle.py  triangle.py
src/planar_geometry/utils/: __init__.py  angle_ops.py  coordinate_ops.py  geometry_utils.py  intersection_ops.py  projection_ops.py  query_ops.py
tests/: __init__.py  test_curve.py  test_geometry.py  test_geometry_utils.py  test_point.py  test_surface.py  test_triangle_ellipse.py
