[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "planar_geometry"
version = "0.2.0"
description = "High-performance 2D planar geometry computation library following SOLID principles with modular architecture and zero dependencies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "wangheng", email = "wangfaofao@gmail.com" }
]
keywords = [
    "geometry",
    "computational-geometry",
    "2d",
    "planar",
    "mathematical",
    "solid-principles",
    "cython-ready",
    "zero-dependencies"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

# 第三方依赖
dependencies = [
    "sphinx>=8.1.3",
]

[project.urls]
Homepage = "https://github.com/wangfaofao/planar_geometry"
Repository = "https://github.com/wangfaofao/planar_geometry.git"
Documentation = "https://github.com/wangfaofao/planar_geometry#api-文档"
Changelog = "https://github.com/wangfaofao/planar_geometry/blob/main/CHANGELOG.md"
Issues = "https://github.com/wangfaofao/planar_geometry/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages]
find = { where = ["src"], include = ["planar_geometry*"] }

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.toxsphinx>=7.2.0
sphinx-rtd-theme>=1.3.0
sphinx-autodoc-typehints>=1.24.0
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | eggs
  | .eggs
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
]
ignore = [
    "E501",   # line too long (handled by black)
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--strict-markers", "--tb=short"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["planar_geometry"]
known_standard_library = ["abc", "math", "sys", "os", "unittest"]
