# =============================================================================
# 平面几何计算库 - Python 项目配置文件
# =============================================================================
# 本文件采用 PEP 517/518 标准，定义项目元数据、构建系统和开发工具配置
# 参考文档: https://packaging.python.org/en/latest/specifications/pyproject-toml/

# =============================================================================
# 第一部分: 构建系统配置
# =============================================================================
# 定义构建后端和构建所需的依赖
[build-system]
requires = [
    "setuptools>=68.0",    # Python 包构建工具
    "wheel",               # 二进制 wheel 打包支持
]
build-backend = "setuptools.build_meta"  # 使用 setuptools 作为构建后端


# =============================================================================
# 第二部分: 项目元数据
# =============================================================================
# 定义项目的基本信息，包括名称、版本、描述等

[project]
name = "planar_geometry"
version = "0.2.0"
description = "High-performance 2D planar geometry computation library following SOLID principles with modular architecture and zero dependencies"

# 读取me文件路径，用于 PyPI 显示
readme = "README.md"

# Python 版本要求
requires-python = ">=3.10"

# 开源许可证
license = { text = "MIT" }

# 作者信息
authors = [
    { name = "wangheng", email = "wangfaofao@gmail.com" }
]

# 关键词索引，便于在 PyPI 中搜索
keywords = [
    "geometry",
    "computational-geometry",
    "2d",
    "planar",
    "mathematical",
    "solid-principles",
    "cython-ready",
    "zero-dependencies"
]

# 分类器（仅用于 PyPI 显示，不影响功能）
classifiers = [
    # 开发状态
    "Development Status :: 4 - Beta",

    # 目标受众
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",

    # 许可证
    "License :: OSI Approved :: MIT License",

    # 语言支持
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",

    # 操作系统兼容性
    "Operating System :: OS Independent",

    # Python 版本支持
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

    # 主题分类
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",

    # 类型检查支持
    "Typing :: Typed"
]

# 项目相关链接
[project.urls]
Homepage = "https://github.com/wangfaofao/planar_geometry"
Repository = "https://github.com/wangfaofao/planar_geometry.git"
Documentation = "https://github.com/wangfaofao/planar_geometry#api-文档"
Changelog = "https://github.com/wangfaofao/planar_geometry/blob/main/CHANGELOG.md"
Issues = "https://github.com/wangfaofao/planar_geometry/issues"


# =============================================================================
# 第三部分: 构建配置
# =============================================================================
# 配置包发现和包含规则

[tool.setuptools]
# 指定源码根目录（相对于 pyproject.toml）
package-dir = { "" = "src" }

# 自动发现包配置
[tool.setuptools.packages.find]
where = ["src"]          # 在 src 目录下查找包
include = ["planar_geometry*"]  # 只包含 planar_geometry 包


# =============================================================================
# 第四部分: 代码质量工具配置
# =============================================================================

# -----------------------------------------------------------------------------
# Black - Python 代码格式化工具
# 文档: https://black.readthedocs.io/
# -----------------------------------------------------------------------------
[tool.black]
line-length = 100                          # 行长度限制
target-version = ["py310", "py311", "py312", "py313"]  # 目标 Python 版本
include = '\.pyi?$'                        # 需要格式化的文件模式

# 排除不格式化的目录
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | eggs
  | .eggs
)/
'''

# -----------------------------------------------------------------------------
# Ruff - Python linter 和代码检查工具（整合了 isort）
# 文档: https://docs.astral.sh/ruff/
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"

# 启用的规则
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort - 导入排序
    "N",      # pep8-naming - 命名规范
    "UP",     # pyupgrade - 自动升级语法
    "ANN",    # flake8-annotations - 类型注解检查
    "S",      # flake8-bandit - 安全性检查
    "B",      # flake8-bugbear - 常见 bug 检测
    "C4",     # flake8-comprehensions - 优化 comprehension
]

# 忽略的规则
ignore = [
    "E501",   # line too long (由 black 处理)
    "ANN101", # 缺失 self 类型注解
    "ANN102", # 缺失 cls 类型注解
    "S101",   # 使用了 assert（测试中允许）
]

# -----------------------------------------------------------------------------
# isort - 导入排序工具
# 文档: https://pycqa.github.io/isort/
# -----------------------------------------------------------------------------
[tool.isort]
profile = "black"                          # 与 black 保持一致
line_length = 100
known_first_party = ["planar_geometry"]    # 已知的第一方模块
known_standard_library = [                  # 标准库模块（保持顺序）
    "abc",
    "math",
    "sys",
    "os",
    "unittest",
]


# =============================================================================
# 第五部分: 类型检查工具配置
# =============================================================================

# -----------------------------------------------------------------------------
# mypy - 静态类型检查工具
# 文档: https://mypy.readthedocs.io/
# -----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"                    # 目标 Python 版本
warn_return_any = true                     # 警告隐式 Any 返回类型
warn_unused_configs = true                 # 警告未使用的配置
strict_optional = true                     # 严格可选类型检查
disallow_untyped_defs = true               # 禁止无类型定义的函数
disallow_any_generics = true               # 禁止 Any 泛型
check_untyped_defs = true                  # 检查未类型定义的调用

# -----------------------------------------------------------------------------
# pyright - 微软的类型检查工具（更严格）
# 文档: https://microsoft.github.io/pyright/
# -----------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"                # 严格类型检查模式


# =============================================================================
# 第六部分: 测试工具配置
# =============================================================================
# pytest - Python 测试框架
# 文档: https://docs.pytest.org/

[tool.pytest.ini_options]
minversion = "7.0"                         # 最低 pytest 版本要求
testpaths = ["tests"]                      # 测试文件目录
python_files = ["test_*.py"]               # 测试文件命名模式
python_classes = ["Test*"]                 # 测试类命名模式
python_functions = ["test_*"]              # 测试函数命名模式
addopts = [
    "-v",              # verbose - 详细输出
    "--strict-markers",# 严格标记检查
    "--tb=short",      # traceback - 简短错误信息
]


# =============================================================================
# 第七部分: 开发依赖组
# =============================================================================
# 使用 pip install -g "planar-geometry[dev]" 安装

[dependency-groups]
dev = [
    "pytest>=8.0.0",              # 测试框架
    "pytest-cov>=5.0.0",          # 测试覆盖率
    "black>=24.0.0",              # 代码格式化
    "ruff>=0.5.0",                # 代码检查
    "mypy>=1.10.0",               # 类型检查
    "pyright>=1.1.0",             # 类型检查（备选）
    "isort>=5.13.0",              # 导入排序
    "sphinx>=8.1.3",              # 文档生成
    "sphinx-rtd-theme>=1.3.0",    # ReadTheDocs 主题
    "sphinx-autodoc-typehints>=1.24.0",  # 自动类型注解文档
]

# 可选依赖（条件依赖）
[project.optional-dependencies]
docs = [
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
